--- a/datacollection.ipynb
+++ b/datacollection.ipynb
@@ -2,85 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exporting image tile: ./51_0.png\n",
-      "Exporting image tile: ./51_1.png\n",
-      "Exporting image tile: ./51_2.png\n",
-      "Exporting image tile: ./51_3.png\n",
-      "Exporting image tile: ./51_4.png\n",
-      "Exporting image tile: ./51_5.png\n",
-      "Exporting image tile: ./51_6.png\n",
-      "Exporting image tile: ./51_7.png\n",
-      "Exporting image tile: ./52_0.png\n",
-      "Exporting image tile: ./52_1.png\n",
-      "Exporting image tile: ./52_2.png\n",
-      "Exporting image tile: ./52_3.png\n",
-      "Exporting image tile: ./52_4.png\n",
-      "Exporting image tile: ./52_5.png\n",
-      "Exporting image tile: ./52_6.png\n",
-      "Exporting image tile: ./52_7.png\n",
-      "Exporting image tile: ./53_0.png\n",
-      "Exporting image tile: ./53_1.png\n",
-      "Exporting image tile: ./53_2.png\n",
-      "Exporting image tile: ./53_3.png\n",
-      "Exporting image tile: ./53_4.png\n",
-      "Exporting image tile: ./53_5.png\n",
-      "Exporting image tile: ./53_6.png\n",
-      "Exporting image tile: ./53_7.png\n",
-      "Exporting image tile: ./54_0.png\n",
-      "Exporting image tile: ./54_1.png\n",
-      "Exporting image tile: ./54_2.png\n",
-      "Exporting image tile: ./54_3.png\n",
-      "Exporting image tile: ./54_4.png\n",
-      "Exporting image tile: ./54_5.png\n",
-      "Exporting image tile: ./54_6.png\n",
-      "Exporting image tile: ./54_7.png\n",
-      "Exporting image tile: ./55_0.png\n",
-      "Exporting image tile: ./55_1.png\n",
-      "Exporting image tile: ./55_2.png\n",
-      "Exporting image tile: ./55_3.png\n",
-      "Exporting image tile: ./55_4.png\n",
-      "Exporting image tile: ./55_5.png\n",
-      "Exporting image tile: ./55_6.png\n",
-      "Exporting image tile: ./55_7.png\n",
-      "Exporting image tile: ./56_0.png\n",
-      "Exporting image tile: ./56_1.png\n",
-      "Exporting image tile: ./56_2.png\n",
-      "Exporting image tile: ./56_3.png\n",
-      "Exporting image tile: ./56_4.png\n",
-      "Exporting image tile: ./56_5.png\n",
-      "Exporting image tile: ./56_6.png\n",
-      "Exporting image tile: ./56_7.png\n",
-      "Exporting image tile: ./57_0.png\n",
-      "Exporting image tile: ./57_1.png\n",
-      "Exporting image tile: ./57_2.png\n",
-      "Exporting image tile: ./57_3.png\n",
-      "Exporting image tile: ./57_4.png\n",
-      "Exporting image tile: ./57_5.png\n",
-      "Exporting image tile: ./57_6.png\n",
-      "Exporting image tile: ./57_7.png\n",
-      "Exporting image tile: ./58_0.png\n",
-      "Exporting image tile: ./58_1.png\n",
-      "Exporting image tile: ./58_2.png\n",
-      "Exporting image tile: ./58_3.png\n",
-      "Exporting image tile: ./58_4.png\n",
-      "Exporting image tile: ./58_5.png\n",
-      "Exporting image tile: ./58_6.png\n",
-      "Exporting image tile: ./58_7.png\n",
-      "Exporting image tile: ./59_0.png\n",
-      "Exporting image tile: ./59_1.png\n",
-      "Exporting image tile: ./59_2.png\n",
-      "Exporting image tile: ./59_3.png\n",
-      "Exporting image tile: ./59_4.png\n",
-      "Exporting image tile: ./59_5.png\n",
-      "Exporting image tile: ./59_6.png\n",
-      "Exporting image tile: ./59_7.png\n"
+      "Exporting image tile: ./0_0.png\n",
+      "Exporting image tile: ./0_1.png\n",
+      "Exporting image tile: ./0_2.png\n",
+      "Exporting image tile: ./0_3.png\n",
+      "Exporting image tile: ./0_4.png\n",
+      "Exporting image tile: ./0_5.png\n",
+      "Exporting image tile: ./0_6.png\n",
+      "Exporting image tile: ./0_7.png\n",
+      "Exporting image tile: ./1_0.png\n",
+      "Exporting image tile: ./1_1.png\n",
+      "Exporting image tile: ./1_2.png\n",
+      "Exporting image tile: ./1_3.png\n",
+      "Exporting image tile: ./1_4.png\n",
+      "Exporting image tile: ./1_5.png\n",
+      "Exporting image tile: ./1_6.png\n",
+      "Exporting image tile: ./1_7.png\n",
+      "Exporting image tile: ./2_0.png\n",
+      "Exporting image tile: ./2_1.png\n",
+      "Exporting image tile: ./2_2.png\n",
+      "Exporting image tile: ./2_3.png\n",
+      "Exporting image tile: ./2_4.png\n",
+      "Exporting image tile: ./2_5.png\n",
+      "Exporting image tile: ./2_6.png\n",
+      "Exporting image tile: ./2_7.png\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 17\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# Drag the mouse to the ending position (adjust coordinates as needed)\u001b[39;00m\n\u001b[0;32m     15\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39mdragTo(\u001b[38;5;241m1610\u001b[39m,\u001b[38;5;241m510\u001b[39m, duration\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)  \u001b[38;5;66;03m# Adjust duration for desired dragging speed\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m; \u001b[38;5;66;03m#so that image can fully render\u001b[39;00m\n\u001b[0;32m     19\u001b[0m r\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m20\u001b[39m,\u001b[38;5;241m60\u001b[39m,\u001b[38;5;241m1820\u001b[39m,\u001b[38;5;241m970\u001b[39m); \u001b[38;5;66;03m#coordinates of the screenshot starting point and resolution\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m#taking and saving screenshot\u001b[39;00m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -94,7 +57,7 @@
     "from split_image import split_image\n",
     "\n",
     "time.sleep(3);\n",
-    "for i in range(0,60,1):\n",
+    "for i in range(0,5,1):\n",
     "    # Move the mouse to the starting position (adjust coordinates as needed)\n",
     "    pyautogui.moveTo(100, 510)\n",
     "\n",
